--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Selection Pannel -->
         <div class="select">
             <select name="todos" class="filter-todo">
-                <option value="incomplete"><em><strong>Processing</strong></em></option>
+                <option value="incomplete"><em><strong>Incomplete</strong></em></option>
                 <option value="completed"><em><strong>completed</strong></em></option>
             </select>
         </div>
